--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<header>
 								<h1>Hi, I am <strong>Oladimeji Ojo</strong></h1>
 							</header>
-							<p> i am a  <strong>Software Engineer</strong> and a </a></p>
+							<p> i am a  <strong>Software Engineer</strong></a></p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
